build_watcher.txt
   Compiling deve_core v0.0.1 (E:\gitclone\Deve-Note\crates\core)
warning: unused import: `anyhow`
 --> crates\core\src\watcher.rs:1:22
  |
1 | use anyhow::{Result, anyhow};
  |                      ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DebounceEventResult`
 --> crates\core\src\watcher.rs:2:67
  |
2 | use notify_debouncer_mini::{new_debouncer, notify::RecursiveMode, DebounceEventResult};
  |                                                                   ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::path::Path`
 --> crates\core\src\watcher.rs:3:5
  |
3 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

error[E0658]: use of unstable library feature `windows_by_handle`
  --> crates\core\src\vfs.rs:26:28
   |
26 |         let id_val = (meta.volume_serial_number() as u128) << 64 | (meta.file_index() as u128);
   |                            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #63010 <https://github.com/rust-lang/rust/issues/63010> for more information

error[E0658]: use of unstable library feature `windows_by_handle`
  --> crates\core\src\vfs.rs:26:74
   |
26 |         let id_val = (meta.volume_serial_number() as u128) << 64 | (meta.file_index() as u128);
   |                                                                          ^^^^^^^^^^
   |
   = note: see issue #63010 <https://github.com/rust-lang/rust/issues/63010> for more information

error[E0605]: non-primitive cast: `std::option::Option<u32>` as `u128`
  --> crates\core\src\vfs.rs:26:22
   |
26 |         let id_val = (meta.volume_serial_number() as u128) << 64 | (meta.file_index() as u128);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
   |
   = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

error[E0605]: non-primitive cast: `std::option::Option<u64>` as `u128`
  --> crates\core\src\vfs.rs:26:68
   |
26 |         let id_val = (meta.volume_serial_number() as u128) << 64 | (meta.file_index() as u128);
   |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
   |
   = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

error[E0616]: field `root` of struct `Vfs` is private
  --> crates\core\src\watcher.rs:27:30
   |
27 |             .watch(&self.vfs.root, RecursiveMode::Recursive)?;
   |                              ^^^^ private field

error[E0616]: field `root` of struct `Vfs` is private
  --> crates\core\src\watcher.rs:29:51
   |
29 |         info!("Watcher started on {:?}", self.vfs.root);
   |                                                   ^^^^ private field

error[E0616]: field `root` of struct `Vfs` is private
  --> crates\core\src\watcher.rs:37:69
   |
37 |                        if let Ok(rel) = path.strip_prefix(&self.vfs.root) {
   |                                                                     ^^^^ private field

warning: unused variable: `doc_id`
  --> crates\core\src\watcher.rs:89:25
   |
89 |             if let Some(doc_id) = self.ledger.get_docid(path_str)? {
   |                         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_doc_id`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0605, E0616, E0658.
For more information about an error, try `rustc --explain E0605`.
warning: `deve_core` (lib) generated 4 warnings
error: could not compile `deve_core` (lib) due to 7 previous errors; 4 warnings emitted
